--- a/Project.Rmd
+++ b/Project.Rmd
@@ -18,9 +18,9 @@ People regularly quantify how much of a particular activity they do, but they ra
 
 
 ```{r, echo = FALSE, results="hide", warning=FALSE, message=FALSE}
-train_data <- read.csv("C:/Users/bamini/Documents/Coursera/Practical_Machine_Learning/Course Project/pml-training.csv", na.strings = c("NA","#DIV/0!"))
+train_data <- read.csv("C:/Users/bamini/Documents/Coursera/Practical_Machine_Learning/Practical-Machine-Learning/pml-training.csv", na.strings = c("NA","#DIV/0!"))
 #classes <- unname(sapply(train_data[,1:59], class))
-test_data <- read.csv("C:/Users/bamini/Documents/Coursera/Practical_Machine_Learning/Course Project/pml-testing.csv", na.strings = c("NA","#DIV/0!"))
+test_data <- read.csv("C:/Users/bamini/Documents/Coursera/Practical_Machine_Learning/Practical-Machine-Learning/pml-testing.csv", na.strings = c("NA","#DIV/0!"))
 library(caret)
 library(randomForest)
 library(e1071)
@@ -95,6 +95,10 @@ CM_svm <- confusionMatrix(validation$classe, predict(fit_svm, validation))
 
 # Calculate model accuracies
 sapply(list(trees = CM_trees, bagging = CM_bagging, RF = CM_rf, SVM = CM_svm), function(x) x$overall["Accuracy"])
+
+CM_rf
+
+CM_bagging
 ```
 
 This shows that the random forest model and bagging model have greatest accuracy. 
